Imgs on homepage stop stretching

--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ body{
 
 .coverimgfull img {
     display: block;
-    max-height: 500px;
+    /*max-height: 500px;*/
     width: 100%;
     opacity: 1;
 }
